--- a/Zoucun112.plist
+++ b/Zoucun112.plist
@@ -23,9 +23,9 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>subtitle</key>
-				<string>民情地图</string>
+				<string>嵊州民情地图</string>
 				<key>title</key>
-				<string>民情地图</string>
+				<string>嵊州民情地图</string>
 			</dict>
 		</dict>
 	</array>
